fix reward page horizontal scroll

--- a/src/styles/title.scss
+++ b/src/styles/title.scss
@@ -1,7 +1,5 @@
 .title-container {
   background: #1e3932;
-  position: sticky;
-  top: 0;
   width: 100VW;
   section {
     height: 3rem;
